--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     --cornflower: #e7e9fc;
     --white: #fff;
     --slate: #434455;
+    --light-slate: #8E8F99;
     --navy-blue: #2e2f42;
     --iris: #4d5ae5;
     --ocean: #404bbf;
@@ -503,3 +504,142 @@ margin-left: 30px;
 .subscribe-button:hover, .subscribe-button:focus, .subscribe-button:active{
     background-color: var(--ocean);
 }
+
+
+
+/* MODAL */
+
+.modal-window{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;    
+    padding: 72px 24px 24px 24px;
+}
+
+.btn-close{
+    position: absolute;
+    top:24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;   
+    border: 1px solid var(--cornflower);
+    background-color: var(--cornflower);
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0px;    
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close-icon{
+    fill: var(--navy-blue);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close:hover, .btn-close:focus{
+    background-color: var(--ocean);
+    border: none;
+}
+
+.btn-close:hover .btn-close-icon, .btn-close:focus .btn-close-icon{
+    fill: var(--white);
+}
+
+
+/* modal form */
+
+.form-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--navy-blue); 
+    text-align: center;
+}
+
+.frm-contacts{
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.frm-label{
+    display: block;
+    color: var(--light-slate);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;    
+    margin-bottom: 4px;
+}
+
+.input-icons{
+    position: relative;
+    margin-bottom: 16px;
+}
+
+.frm-icon{
+    position: absolute;
+    top: 11px;
+    left: 16px;
+    right: 4px;
+}
+
+.frm-input{
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+}
+
+.frm-input:hover, .frm-input:focus, .frm-input:focus{
+    border: 2px solid var(--iris);
+    outline: none;
+}
+
+
+
+.comment-input{
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+.comment-input::placeholder{
+    color:rgba(46, 47, 66, 0.4);
+}
+
+
+
+
+
