--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,7 @@ body {
 .frm-input:hover,
 .frm-input:focus,
 .frm-input:focus {
-  border: 2px solid var(--iris);
+  border-color: var(--iris);
   outline: none;
 }
 
@@ -629,4 +629,60 @@ body {
 }
 .comment-input::placeholder {
   color: rgba(46, 47, 66, 0.4);
+}
+.comment-input:hover, .comment-input:focus, .comment-input:active{
+    border-color: var(--iris);
+    outline: none;
+}
+
+.checkbox-container {
+  margin-bottom: 24px;
+}
+
+.privacy-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.privacy-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.privacy-link {
+  color: #4d5ae5;
+}
+
+.privacy-checkbox:checked + .privacy-label > .privacy-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.modal-window-second-btn {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: auto;
 }
