--- a/css/styles.css
+++ b/css/styles.css
@@ -503,14 +503,15 @@ body {
 
 .modal-window {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(46, 47, 66, 0.4);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .modal-container {
   position: absolute;
@@ -524,129 +525,158 @@ body {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
-}
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
 
-.btn-close {
+}
+.close-button {
   position: absolute;
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
-  border: 1px solid var(--cornflower);
-  background-color: var(--cornflower);
   border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0px;
-  cursor: pointer;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
-.btn-close-icon {
-  fill: var(--navy-blue);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn-close:hover,
-.btn-close:focus {
-  background-color: var(--ocean);
+  
+.close-button:hover,
+.close-button:focus {
+  background-color: #404bbf;
   border: none;
 }
 
-.btn-close:hover .btn-close-icon,
-.btn-close:focus .btn-close-icon {
-  fill: var(--white);
+.close-button:hover .close-icon,
+.close-button:focus .close-icon {
+  fill: #fff;
 }
 
-.form-title {
+.close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #ffffff
+}
+
+.modal-p {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--navy-blue);
   text-align: center;
-}
-
-.frm-contacts {
-  margin-top: 16px;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
   margin-bottom: 16px;
 }
 
-.frm-label {
-  display: block;
-  color: var(--light-slate);
-  font-weight: 400;
+.group {
+
+  margin-bottom: 8px;
+ 
+}
+
+.label-group {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
   margin-bottom: 4px;
 }
 
-.input-icons {
+.input-group {
+
   position: relative;
-  margin-bottom: 16px;
+
 }
 
-.frm-icon {
-  position: absolute;
-  top: 11px;
-  left: 16px;
-  right: 4px;
+
+
+.input-group:focus-within {
+  border-color: #4d5ae5;
+  fill: #4d5ae5;
 }
 
-.frm-input {
+
+.modal-inp {
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4); 
   border-radius: 4px;
   background-color: transparent;
   padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.frm-input:hover,
-.frm-input:focus,
-.frm-input:focus {
-  border-color: var(--iris);
-  outline: none;
+
+.modal-inp:focus {
+  border-color: #4d5ae5;
 }
 
-.comment-input {
+.group-svg {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%); /* Bu stil, dikeyde ortalamayı sağlar */
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.group-two {
+  margin-bottom: 16px;
+}
+
+.text-tarea {
+  display: block;
+  resize: none;
   width: 100%;
   height: 120px;
-  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
   background-color: transparent;
-  resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 8px 16px;
+  outline: transparent;
 }
-.comment-input::placeholder {
-  color: rgba(46, 47, 66, 0.4);
-}
-.comment-input:hover, .comment-input:focus, .comment-input:active{
-    border-color: var(--iris);
-    outline: none;
+.text-tarea:focus {
+  border-color: #4d5ae5;
 }
 
-.checkbox-container {
+.check-box {
   margin-bottom: 24px;
 }
 
-.privacy-label {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.check-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
 
-.privacy-span {
+.span-p {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -654,23 +684,22 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  fill: transparent;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
 }
-
-.privacy-link {
-  color: #4d5ae5;
+.link-a{
+  color: #4D5AE5;
 }
+.inpat-check:checked + .check-label .span-p {
 
-.privacy-checkbox:checked + .privacy-label > .privacy-span {
-  background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
-}
+  background-color: #404bbf;
 
-.modal-window-second-btn {
+}
+.modal-button {
   display: block;
   min-width: 169px;
   height: 56px;
@@ -679,10 +708,10 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #ffffff;
+  color: #ffff;
   cursor: pointer;
-  background-color: #4d5ae5;
+  background-color: #4D5AE5;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin: auto;
+  margin-left: 80px;
 }
